# suicide_detection

./: .gitignore  README.md  pyproject.toml  suicide_detection.py  utils.py
